# new_hanium

./: .gitignore  README.md  TODO.md
hailo_test/: error.txt  hailo_test.cpp
hailo_test/hailo_test/: hailo_inference  hailo_test.cpp  hailo_test_json  hailo_test_json.cpp
pratice/: CMakeLists.txt  Sys_cfg.json  array.cpp  array.hpp  capture.cpp  capture.hpp  client.cpp  client.hpp  config.cpp  config.hpp  datacheck.hpp  global_context.cpp  global_context.hpp  inference.cpp  inference.hpp  main.cpp  processing.cpp  processing.hpp  save.cpp  save.hpp  send.cpp  send.hpp  sharedResource.cpp  sharedResource.hpp
src/: CMakeLists.txt  Sys_cfg.json  capture.cpp  capture.hpp  client.cpp  client.hpp  config.cpp  config.hpp  global_context.hpp  inference.cpp  inference.hpp  main.cpp  processing.cpp  processing.hpp  save.cpp  save.hpp  send.cpp  send.hpp  sharedResource.cpp  sharedResource.hpp  util.hpp
testcode/: CMakeLists.txt  test_ProcessingThread.cpp  test_inferenceThread.cpp  testcode.cpp
